<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actitvity.HelpActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/help"
        android:elevation="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="10dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_help_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dashboard"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="28dp"
            android:gravity="end"
            android:text="Choong"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/ic_person_white_24dp" />

    </FrameLayout>
    <LinearLayout
        android:id="@+id/menuLinearLayout"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="@color/colorPrimaryDark" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:src="@drawable/ic_menu_white_24dp" />

        <TextView
            android:id="@+id/menu_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Menu"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>



    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/check_internet"
        android:layout_width="wrap_content"/>
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/check_camera"
        android:layout_width="wrap_content"/> <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/login_inform"
        android:layout_width="wrap_content"/> <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:text="@string/inquiry"
        android:layout_width="wrap_content"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginLeft="180dp"
        android:src="@drawable/lwe"/>



</LinearLayout>